[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "3.10"
numpy = "^1.22.2"
replit = "^3.2.4"
"discord.py" = "^2.1.0"
revChatGPT = "^0.0.38.8"
discord = "^2.1.0"
mkdocs-techdocs-core = "^1.1.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"